<resources>
    <string name="app_name">Goals Keeper</string>
    <string name="facebook_app_id">918693091501465</string>
    
    
    <string name="action_settings">Settings</string>
    <string name="about">About</string>
    <string name="desc_placeholder_app_icon">app icon placeholder</string>
    <string name="no_description">null</string>

    <string name="app_title">Goals keeper</string>
    <string name="btn_facebook_login">Login with Facebook</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_logout">Log Out</string>
    <string name="goals_search_hint">Goal</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec purus in ante pretium blandit. Aliquam erat volutpat. Nulla libero lectus.</string>
    <string name="user_name_placeholder">John Doe</string>
    <string name="goal_name_placeholder">get A+</string>
    <string name="action_search">search</string>
    <string name="create_post_goal_select_hint">What is your goal ?</string>
    <string name="create_post_body_hint">Update people with your story</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="post">Post</string>
    <string name="comment">Comment</string>
    <string name="goal_description_hint">Tell people more about your goal</string>
    <string name="api_base_url">http://10.0.2.2:3000/api/</string>
</resources>
