<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/content_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <AutoCompleteTextView
            android:id="@+id/activity_create_goal_edit_text_title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:hint="@string/create_post_goal_select_hint" />

        <EditText
            android:id="@+id/activity_create_goal_edit_text_description"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="25dp"
            android:layout_weight="0.8"
            android:gravity="top|left"
            android:hint="@string/goal_description_hint"
            android:inputType="textMultiLine"
            android:lines="10"
            android:maxLines="300"
            android:textStyle="normal" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:gravity="right|bottom">

            <Button
                android:id="@+id/activity_create_goal_button_cancel"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/activity_create_goal_button_create"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:text="@string/create" />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>