<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/tools"
        android:id="@+id/item_goal_card_view_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        card_view:cardBackgroundColor="#bebebe"
        card_view:cardElevation="2dp"
        card_view:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <TextView
                android:id="@+id/item_goal_text_view_goal_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/goal_name_placeholder"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/item_goal_image_view_add_goal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/no_description"
                android:src="@drawable/icon_goal_add" />

            <TextView
                android:id="@+id/goal_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/item_goal_text_view_goal_title"
                android:ellipsize="end"
                android:maxLength="140"
                android:text="@string/lorem_ipsum"
                android:textSize="15sp" />

        </RelativeLayout>


    </android.support.v7.widget.CardView>


</LinearLayout>