<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/tools"
        android:id="@+id/card_view_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        card_view:cardBackgroundColor="#bebebe"
        card_view:cardElevation="2dp"
        card_view:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">


            <ImageButton
                android:id="@+id/imgbtn_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:background="@android:color/transparent"
                android:contentDescription="@string/no_description"
                android:src="@drawable/ic_share_black_24dp" />

            <TextView
                android:id="@+id/timeline_txt_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imgbtn_share"
                android:layout_marginBottom="5dp"
                android:text="@string/user_name_placeholder"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/timeline_txt_post_preview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/timeline_txt_user_name"
                android:ellipsize="end"
                android:maxLength="140"
                android:text="@string/lorem_ipsum"
                android:textSize="18sp" />


            <ImageButton
                android:id="@+id/imgbtn_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/timeline_txt_post_preview"
                android:layout_below="@+id/timeline_txt_post_preview"
                android:layout_marginLeft="10dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/no_description"
                android:src="@drawable/ic_mode_comment_black_24dp" />

            <ImageButton
                android:id="@+id/imgbtn_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/timeline_txt_post_preview"
                android:layout_toLeftOf="@id/imgbtn_comment"
                android:background="@android:color/transparent"
                android:contentDescription="@string/no_description"
                android:src="@drawable/ic_favorite_border_black_24dp" />


        </RelativeLayout>


    </android.support.v7.widget.CardView>


</LinearLayout>